# Dragon-Display

./: .gitignore  Cargo.toml  README.md  build.rs  client_secret.json  install_packages.sh  install_schemas  shell.nix
resources/: add_campaign.ui  control_window.ui  display_window.ui  error_dialog.ui  folder_tree.ui  googledrive_connect.ui  googledrive_select_folder.ui  googledrive_synchronize.ui  image_page.ui  options.ui  progress_bar.ui  remove_campaign.ui  remove_confirm.ui  resources.gresource.xml  select_campaign.ui  select_monitor.ui  thumbnail.ui  thumbnail_grid.ui  thumbnail_image.ui  thumbnail_video.ui  video_page.ui  vtt_area.ui
src/: campaign.rs  campaigns.rs  config.rs  errors.rs  fogofwar.rs  gd_client.rs  google_drive.rs  google_drive_sync.rs  main.rs  manage_campaign_gui.rs  manage_campaign_logic.rs  mod.rs  program.rs  program_manager.rs  settings.gschema.xml  setup.rs  setup_manager.rs  videopipeline.rs
src/dragon_display/: gui.rs  mod.rs
src/dragon_display/setup/: gui.rs  (+5 more)
src/main_program/: gui.rs  mod.rs
src/manage_campaign/: config.rs  gui.rs  mod.rs
src/screen_selection/: mod.rs
src/settings/: com.github.SangzorDeGeit.Dragon-Display.gschema.xml
src/ui/: add_campaign.rs  control_window.rs  display_window.rs  error_dialog.rs  googledrive_connect.rs  googledrive_select_folder.rs  googledrive_synchronize.rs  mod.rs  options.rs  remove_campaign.rs  remove_confirm.rs  select_campaign.rs  select_monitor.rs
src/widgets/: campaign_button.rs  google_folder_object.rs  google_folder_tree.rs  image_page.rs  mod.rs  monitor_button.rs  progress_bar.rs  remove_button.rs  thumbnail.rs  thumbnail_grid.rs  thumbnail_image.rs  thumbnail_video.rs  video.rs  video_page.rs  vtt_area.rs
(+20 files in other folders)
