[package]
name = "dragon_display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
google-drive = "0.6.0"