[package]
name = "dragon_display"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
google-drive = "0.7"
tokio = { version = "1", features = ["full"]}
serde_json = "1.0"
base64 = "0.22.0"
rouille = "3.6.2"
open = "5.0"
unicode-segmentation = "1.10.1"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_8"] }
gdk4 = "0.8.1"
adw = { version = "0.6", package = "libadwaita", features = ["v1_2"] }
gstreamer = "0.24"
gstreamer-app = "0.24"
futures = "0.3.29"
async-channel = "2.3.1"
async-recursion = "1.1.1"
reqwest = {version="0.10.10", features=["json", "blocking"]}
snafu = "0.8"

[build-dependencies]
glib-build-tools = "0.20.0"
